создал заготовку блока, для выбора цвета

--- a/single.html
+++ b/single.html
@@ -435,12 +435,17 @@
             <form class="propeties__form" action="#">
                 <div class="propeties__form-items">
                     <div class="propeties__form-item">
+                        <!-- блок 1 ЦВЕТ -->
                         <h3 class="propeties__form-head">CHOOSE COLOR</h3>
-                        <select name="COLOR" id="COLOR">
-                            <option value="red">red</option>
-                            <option value="green">green</option>
-                            <option value="blue">blue</option>
-                        </select>
+                        <details>
+                            <summary class="propeties__summary">
+                                <div class="propeties__colors">
+                                    <div class="propeties__colors-item"></div>
+                                    <div class="propeties__colors-text">Red</div>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                            </summary>
+                        </details>
                     </div>
                     <div class="propeties__form-item">
                         <h3 class="propeties__form-head">CHOOSE SIZE</h3>
