создание выпадающего меню

--- a/single.html
+++ b/single.html
@@ -437,7 +437,7 @@
                     <div class="propeties__form-item">
                         <!-- блок 1 ЦВЕТ -->
                         <h3 class="propeties__form-head">CHOOSE COLOR</h3>
-                        <details>
+                        <details class="propeties__details">
                             <summary class="propeties__summary">
                                 <div class="propeties__colors">
                                     <div class="propeties__colors-item"></div>
@@ -445,6 +445,11 @@
                                     <i class="fa fa-caret-down" aria-hidden="true"></i>
                                 </div>
                             </summary>
+                            <div class="propeties__colors">
+                                <div class="propeties__colors-item propeties__colors-item_ab"></div>
+                                <div class="propeties__colors-text">Red</div>
+                                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </div>
                         </details>
                     </div>
                     <div class="propeties__form-item">
