меню выбора цвета готово

--- a/single.html
+++ b/single.html
@@ -423,7 +423,8 @@
             <h2 class="propeties__head">Moschino Cheap And Chic</h2>
             <p class="propeties__text">
                 Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate
-                collaborative architectures before cutting-edge services. Completely visualize parallel core competencies
+                collaborative architectures before cutting-edge services. Completely visualize parallel core
+                competencies
                 rather than exceptional portals.
             </p>
             <div class="propeties__options">
@@ -435,7 +436,7 @@
             <form class="propeties__form" action="#">
                 <div class="propeties__form-items">
                     <div class="propeties__form-item">
-                        <!-- блок 1 ЦВЕТ -->
+                        <!-- блок по умолчанию -->
                         <h3 class="propeties__form-head">CHOOSE COLOR</h3>
                         <details class="propeties__details">
                             <summary class="propeties__summary">
@@ -445,6 +446,23 @@
                                     <i class="fa fa-caret-down" aria-hidden="true"></i>
                                 </div>
                             </summary>
+                            <!-- выпадающее меню -->
+                            <div class="propeties__drop">
+                                <div class="propeties__drop-items">
+                                    <div class="propeties__colors propeties__colors_items">
+                                        <div class="propeties__colors-item"></div>
+                                        <div class="propeties__colors-text propeties__colors-text_drop">Red</div>
+                                    </div>
+                                    <div class="propeties__colors propeties__colors_items">
+                                        <div class="propeties__colors-item propeties__colors-item_yellow"></div>
+                                        <div class="propeties__colors-text propeties__colors-text_drop">Yellow</div>
+                                    </div>
+                                    <div class="propeties__colors propeties__colors_items">
+                                        <div class="propeties__colors-item propeties__colors-item_blue"></div>
+                                        <div class="propeties__colors-text propeties__colors-text_drop">Blue</div>
+                                    </div>
+                                </div>
+                            </div>
                         </details>
                     </div>
                     <div class="propeties__form-item">
