перенос на страницу checkout

--- a/cart.html
+++ b/cart.html
@@ -127,7 +127,7 @@
                 </details>
 
                 <!-- кнопка профиля -->
-                <details class="drop drop_account my-account">
+                <details class="drop drop_account">
                     <summary class="drop__summary ">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
                     <!-- блок с карточками -->
