корректировка ссылок на странице index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </a>
                 <!-- кнопка поиска параметров -->
                 <details class="drop drop_browse">
-                    <summary class="drop__summary">Browse <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
+                    <summary class="drop__summary drop__summary_pink">Browse <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
                     <div class="drop__items drop__items_browse">
                         <div class="drop__item">
                             <h3 class="menu__title">Home</h3>
