обновление блока аккаунт на странице product

--- a/product.html
+++ b/product.html
@@ -127,56 +127,13 @@
                 <details class="drop drop_account">
                     <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
-                    <!-- блок с карточками -->
+                    <!-- блок с настройками -->
                     <div class="drop__items drop__items_account">
-                        <!-- карточка 1 -->
-                        <div class="drop__item_buy">
-                            <a href="#MyAccount1"><img src="./img/card/card1.png" alt="товар в корзине"></a>
-                            <div class="drop__item-data">
-                                <h3 class="drop__item-text">Rebox Zane</h3>
-                                <div class="drop__item-star">
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star-half-o drop_star" aria-hidden="true"></i>
-                                </div>
-                                <p class="drop__item-text drop__item_price">1 <span class="drop__span">x</span> $250</p>
-                            </div>
-                            <div class="drop__close">
-                                <i class="fa fa-times-circle drop__item_close" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <hr>
-                        <!-- карточка 2 -->
-                        <div class="drop__item_buy">
-                            <a href="#MyAccount2"><img src="./img/card/card2.png" alt="товар в корзине"></a>
-                            <div class="drop__item-data">
-                                <h3 class="drop__item-text">Rebox Zane</h3>
-                                <div class="drop__item-star">
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
-                                    <i class="fa fa-star-half-o drop_star" aria-hidden="true"></i>
-                                </div>
-                                <p class="drop__item-text drop__item_price">1 <span class="drop__span">x</span> $250</p>
-                            </div>
-                            <div class="drop__close">
-                                <i class="fa fa-times-circle drop__item_close" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="drop__total">
-                            <p class="drop__total_price">TOTAL</p>
-                            <p class="drop__total_price">$500.00</p>
-                        </div>
                         <div class="drop__button-account">
-                            <a class="drop__button-account_link drop__button-account_hover"
-                                href="./checkout.html">Checkout</a>
-                            <a class="menu__link drop__button-account_link drop__button-account_gray"
-                                href="./cart.html">Go to
-                                cart</a>
+                            <a class="menu__link drop__button-account_link drop__button-account_gray" href="#profile">My profile</a>
+                            <a class="drop__button-account_link drop__button-account_hover" href="#shipp">Shipping</a>
+                            <a class="drop__button-account_link drop__button-account_hover" href="./checkout.html">Checkout</a>
+                            <a class="menu__link drop__button-account_link drop__button-account_gray" href="./cart.html">Go to cart</a>
                         </div>
                     </div>
                 </details>
