--- a/cart.html
+++ b/cart.html
@@ -75,7 +75,7 @@
                     <div class="drop__items drop__items_account">
                         <!-- карточка 1 -->
                         <div class="drop__item_buy">
-                            <a href="#MyAccount1"><img src="./img/card/card1.png" alt="товар в корзине"></a>
+                            <a href="./single.html"><img src="./img/card/card1.png" alt="товар в корзине"></a>
                             <div class="drop__item-data">
                                 <h3 class="drop__item-text">Rebox Zane</h3>
                                 <div class="drop__item-star">
@@ -94,7 +94,7 @@
                         <hr>
                         <!-- карточка 2 -->
                         <div class="drop__item_buy">
-                            <a href="#MyAccount2"><img src="./img/card/card2.png" alt="товар в корзине"></a>
+                            <a href="./single.html"><img src="./img/card/card2.png" alt="товар в корзине"></a>
                             <div class="drop__item-data">
                                 <h3 class="drop__item-text">Rebox Zane</h3>
                                 <div class="drop__item-star">
