--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <!-- // форма поиска -->
             </div>
             <div class="main-header__right">
+                <!-- корзина -->
                 <details class="drop">
                     <summary class="drop__cart-summary">
                         <svg xmlns="http://www.w3.org/2000/svg" class="store mobile-none" width="32" height="29" viewBox="0 0 32 29"
@@ -94,7 +95,7 @@
                         <hr>
                         <!-- карточка 2 -->
                         <div class="drop__item_buy">
-                            <a href="#MyAccount2"><img src="./img/card/card2.png" alt="товар в корзине"></a>
+                            <a href="./single.html"><img src="./img/card/card2.png" alt="товар в корзине"></a>
                             <div class="drop__item-data">
                                 <h3 class="drop__item-text">Rebox Zane</h3>
                                 <div class="drop__item-star">
