--- a/index.html
+++ b/index.html
@@ -530,6 +530,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card2 -->
@@ -552,6 +560,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card3 -->
@@ -574,6 +590,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card4 -->
@@ -596,6 +620,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card5 -->
@@ -618,6 +650,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card6 -->
@@ -640,6 +680,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card7 -->
@@ -662,6 +710,14 @@
                                     fill="#E8E8E8" />
                             </svg>Add to Cart
                         </a>
+                        <div class="products-item__card products-item__card_mod">
+                            <a class="products-item__link products-item__link_mod" href="#add2">
+                                <i class="fa fa-repeat" aria-hidden="true"></i>
+                            </a>
+                            <a class="products-item__link products-item__link_mod" href="#add3">
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <!-- // card8 -->
