изменение ссылок, завершение работы над макетом

--- a/product.html
+++ b/product.html
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="menu__list menu__list_active"><a href="./product.html" class="menu__link">men</a>
+                <li class="menu__list menu__list_active"><a href="#2" class="menu__link">men</a>
                     <div class="dropdown">
                         <div class="menu__item">
                             <h3 class="menu__title">men</h3>
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="menu__list acc"><a href="#5" class="menu__link">accesories</a>
+                <li class="menu__list acc"><a href="product.html" class="menu__link">Product</a>
                     <div class="dropdown">
                         <div class="menu__item">
                             <h3 class="menu__title">accesories</h3>
