--- a/single.html
+++ b/single.html
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="menu__list "><a href="./product.html" class="menu__link">men</a>
+                <li class="menu__list "><a href="#2" class="menu__link">men</a>
                     <div class="dropdown">
                         <div class="menu__item">
                             <h3 class="menu__title">men</h3>
@@ -293,7 +293,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="menu__list acc"><a href="#5" class="menu__link">accesories</a>
+                <li class="menu__list acc"><a href="product.html" class="menu__link">Product</a>
                     <div class="dropdown">
                         <div class="menu__item">
                             <h3 class="menu__title">accesories</h3>
