корректировка страницы index  и product

--- a/product.html
+++ b/product.html
@@ -604,6 +604,14 @@
                                         fill="#E8E8E8" />
                                 </svg>Add to Cart
                             </a>
+                            <div class="products-item__card products-item__card_mod">
+                                <a class="products-item__link products-item__link_mod" href="#add2">
+                                    <i class="fa fa-repeat" aria-hidden="true"></i>
+                                </a>
+                                <a class="products-item__link products-item__link_mod" href="#add3">
+                                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <!-- card 2 -->
@@ -625,6 +633,14 @@
                                         fill="#E8E8E8" />
                                 </svg>Add to Cart
                             </a>
+                            <div class="products-item__card products-item__card_mod">
+                                <a class="products-item__link products-item__link_mod" href="#add2">
+                                    <i class="fa fa-repeat" aria-hidden="true"></i>
+                                </a>
+                                <a class="products-item__link products-item__link_mod" href="#add3">
+                                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <!-- card 3 -->
@@ -646,6 +662,14 @@
                                         fill="#E8E8E8" />
                                 </svg>Add to Cart
                             </a>
+                            <div class="products-item__card products-item__card_mod">
+                                <a class="products-item__link products-item__link_mod" href="#add2">
+                                    <i class="fa fa-repeat" aria-hidden="true"></i>
+                                </a>
+                                <a class="products-item__link products-item__link_mod" href="#add3">
+                                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <!-- card 4 -->
